--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="timeline.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/timeline.css">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"  rel="stylesheet" />
     <title>Raptors | Timeline</title>
+
 </head>
+
 <body>
-    
+
+    <div class="maincontent">
+
+
+
+
+
+
+
+
+
+
+    </div>
+
     <script src="timeline.js"></script>
     <script src="nav.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+
 </body>
+
 </html>
