--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/timeline.css">
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"  rel="stylesheet" />
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/timeline.css">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <title>Raptors | Timeline</title>
 
 </head>
 
 <body>
+    <nav id="navbar"></nav>
 
-    <div class="maincontent">
+    <main>
+        
+    </main>
 
+    <footer id="footer"></footer>
 
-
-
-
-
-
-
-
-
-    </div>
-
-    <script src="timeline.js"></script>
-    <script src="nav.js"></script>
+    <script src="../scripts/timeline.js"></script>
+    <script src="../scripts/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 
 </body>
