--- a/index.html
+++ b/index.html
@@ -8,35 +8,47 @@
 </head>
 <body>
     <main>
-        <div class="raptor-info">
-            <div class="info-column">
-              <div class="development-section">
-                <div class="section-title">Fejlődés</div>
-                <div class="info-box">Csoportosan rakták a tojásaikat (akár 10-20 db-ot) egy közös fészekbe</div>
-                <div class="info-box-secondary">Már kölyökként csoportosan viselkedtek, és a szülők segítették őket a túlélésben</div>
-                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/c74f1ccc7d556a2068bd39c34324b53b12db89a9e276b9e9ec99354d98933a5c?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor development illustration showing group behavior" />
-              </div>
-            </div>
-          
-            <div class="info-column">
-              <div class="hunting-section">
-                <div class="hunting-title">Vadászat</div>
-                <div class="hunting-info">3-6 fős csoportok lehetővé tették, hogy nagyobb zsákmányt ejtsenek el</div>
-                <div class="hunting-detail">gyorsaságuk és koordinációs képességeik miatt küldönlegesek</div>
-                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/1104e733c43ff030047c51fd79eb15f7c27dfd5223d3975d158b972166d006c7?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor hunting behavior illustration" />
-              </div>
-            </div>
-          
-            <div class="info-column">
-              <div class="species-section">
-                <div class="species-title">Legismertebb fajták</div>
-                <div class="species-info">Velociraptor:<br>Mongólia - sivatag</div>
-                <div class="species-detail">Deinonychus:<br>Észak-Amerika - erdők és sík területek</div>
-                <div class="species-detail">Utahraptor:<br>Észak-Amerika - Utah állam</div>
-                <div class="species-detail">Dromaeosaurus:<br>Kanada és Észak-Amerika északi részei</div>
-              </div>
-            </div>
-          </div>
+      <div class="raptor-info">
+        <div class="info-column">
+            <section class="development-section" aria-labelledby="development-title">
+                <h2 id="development-title" class="section-title">Fejlődés</h2>
+                <p class="info-box">Csoportosan rakták a tojásaikat (akár 10-20 db-ot) egy közös fészekbe</p>
+                <p class="info-box-secondary">Már kölyökként csoportosan viselkedtek, és a szülők segítették őket a túlélésben</p>
+                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/c74f1ccc7d556a2068bd39c34324b53b12db89a9e276b9e9ec99354d98933a5c?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor fejlődési folyamat illusztráció" width="400" height="250">
+            </section>
+        </div>
+
+        <div class="info-column">
+            <section class="hunting-section" aria-labelledby="hunting-title">
+                <h2 id="hunting-title" class="hunting-title">Vadászat</h2>
+                <p class="hunting-info">3-6 fős csoportok lehetővé tették, hogy nagyobb zsákmányt ejtsenek el</p>
+                <p class="hunting-detail">gyorsaságuk és koordinációs képességeik miatt küldönlegesek</p>
+                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/1104e733c43ff030047c51fd79eb15f7c27dfd5223d3975d158b972166d006c7?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor vadászati viselkedés illusztráció" width="400" height="250">
+            </section>
+        </div>
+
+        <div class="info-column">
+            <section class="species-section" aria-labelledby="species-title">
+                <h2 id="species-title" class="species-title">Legismertebb fajták</h2>
+                <div class="species-info">
+                    <h3>Velociraptor</h3>
+                    <p>Mongólia - sivatag</p>
+                </div>
+                <div class="species-detail">
+                    <h3>Deinonychus</h3>
+                    <p>Észak-Amerika - erdők és sík területek</p>
+                </div>
+                <div class="species-detail">
+                    <h3>Utahraptor</h3>
+                    <p>Észak-Amerika - Utah állam</p>
+                </div>
+                <div class="species-detail">
+                    <h3>Dromaeosaurus</h3>
+                    <p>Kanada és Észak-Amerika északi részei</p>
+                </div>
+            </section>
+        </div>
+    </div>
     </main>
 
     <script src="scripts/index.js"></script>
