--- a/pages/jurassic.html
+++ b/pages/jurassic.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="jurassic.css">
+    <link rel="stylesheet" href="nav.css">
     <title>Raptors | Movies</title>
 </head>
 <body>
