--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/timeline.css">
+    <link rel="stylesheet" href="../styles/nav.css">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <title>Raptors | Timeline</title>
 
