Third column dying

--- a/index.html
+++ b/index.html
@@ -8,47 +8,59 @@
 </head>
 <body>
     <main>
-      <div class="raptor-info">
-        <div class="info-column">
-            <section class="development-section" aria-labelledby="development-title">
-                <h2 id="development-title" class="section-title">Fejlődés</h2>
-                <p class="info-box">Csoportosan rakták a tojásaikat (akár 10-20 db-ot) egy közös fészekbe</p>
-                <p class="info-box-secondary">Már kölyökként csoportosan viselkedtek, és a szülők segítették őket a túlélésben</p>
-                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/c74f1ccc7d556a2068bd39c34324b53b12db89a9e276b9e9ec99354d98933a5c?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor fejlődési folyamat illusztráció" width="400" height="250">
-            </section>
-        </div>
+        <div class="raptor-info">
+            <div class="info-column">
+                <section class="development-section" aria-labelledby="development-title">
+                    <h2 id="development-title" class="section-title">Fejlődés</h2>
+                    <p class="info-box">Csoportosan rakták a tojásaikat (akár 10-20 db-ot) egy közös fészekbe</p>
+                    <p class="info-box-secondary">Már kölyökként csoportosan viselkedtek, és a szülők segítették őket a túlélésben</p>
+                    <img loading="lazy" src="images/hatchlings.jpg" class="raptor-image" alt="Tojások" width="400" height="250">
+                </section>
+            </div>
 
-        <div class="info-column">
-            <section class="hunting-section" aria-labelledby="hunting-title">
-                <h2 id="hunting-title" class="hunting-title">Vadászat</h2>
-                <p class="hunting-info">3-6 fős csoportok lehetővé tették, hogy nagyobb zsákmányt ejtsenek el</p>
-                <p class="hunting-detail">gyorsaságuk és koordinációs képességeik miatt küldönlegesek</p>
-                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/1104e733c43ff030047c51fd79eb15f7c27dfd5223d3975d158b972166d006c7?placeholderIfAbsent=true&apiKey=1e6f8f61f3144a8484386ab19d2c4fde" class="raptor-image" alt="Raptor vadászati viselkedés illusztráció" width="400" height="250">
-            </section>
-        </div>
+            <div class="info-column">
+                <section class="hunting-section" aria-labelledby="hunting-title">
+                    <h2 id="hunting-title" class="hunting-title">Vadászat</h2>
+                    <p class="hunting-info">3-6 fős csoportok lehetővé tették, hogy nagyobb zsákmányt ejtsenek el</p>
+                    <p class="hunting-detail">gyorsaságuk és koordinációs képességeik miatt küldönlegesek</p>
+                    <img loading="lazy" src="images/hunting.jpg" class="raptor-image" alt="Vadászat" width="400" height="250">
+                </section>
+            </div>
 
-        <div class="info-column">
-            <section class="species-section" aria-labelledby="species-title">
-                <h2 id="species-title" class="species-title">Legismertebb fajták</h2>
-                <div class="species-info">
-                    <h3>Velociraptor</h3>
-                    <p>Mongólia - sivatag</p>
-                </div>
-                <div class="species-detail">
-                    <h3>Deinonychus</h3>
-                    <p>Észak-Amerika - erdők és sík területek</p>
-                </div>
-                <div class="species-detail">
-                    <h3>Utahraptor</h3>
-                    <p>Észak-Amerika - Utah állam</p>
-                </div>
-                <div class="species-detail">
-                    <h3>Dromaeosaurus</h3>
-                    <p>Kanada és Észak-Amerika északi részei</p>
-                </div>
-            </section>
+            <div class="info-column">
+              <section class="species-section" aria-labelledby="species-title">
+                  <h2 id="species-title" class="species-title">Fajták</h2>
+                  <div class="species-detail" tabindex="0">
+                      <h3>Velociraptor</h3>
+                      <p>Mongólia - sivatag</p>
+                      <div class="species-popup">
+                          <img src="images/velociraptor.jpg" alt="Velociraptor" class="popup-image" width="600" height="400">
+                      </div>
+                  </div>
+                  <div class="species-detail" tabindex="0">
+                      <h3>Deinonychus</h3>
+                      <p>Észak-Amerika - erdők és sík területek</p>
+                      <div class="species-popup">
+                          <img src="images/Deinonychus.jpg" alt="Deinonychus" class="popup-image" width="600" height="400">
+                      </div>
+                  </div>
+                  <div class="species-detail" tabindex="0">
+                      <h3>Utahraptor</h3>
+                      <p>Észak-Amerika - Utah állam</p>
+                      <div class="species-popup">
+                          <img src="images/Utahraptor.jpg" alt="Utahraptor" class="popup-image" width="600" height="400">
+                      </div>
+                  </div>
+                  <div class="species-detail" tabindex="0">
+                      <h3>Dromaeosaurus</h3>
+                      <p>Kanada és Észak-Amerika északi részei</p>
+                      <div class="species-popup">
+                          <img src="images/Dromaeosaurus.jpg" alt="Dromaeosaurus" class="popup-image" width="600" height="400">
+                      </div>
+                  </div>
+              </section>
+          </div>
         </div>
-    </div>
     </main>
 
     <script src="scripts/index.js"></script>
