--- a/pages/jurassic.html
+++ b/pages/jurassic.html
@@ -3,14 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="jurassic.css">
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/jurassic.css">
+    <link rel="stylesheet" href="../styles/nav.css">
     <title>Raptors | Movies</title>
 </head>
 <body>
+    <nav id="navbar"></nav>
+    <div>
+
+        asd
+        <br>
+        asd<br>
+        <br>
+        asd<br>
+        asd<br>
+        asd<br>
+        dapibusdsa<br>
+        asd<br>
+        asd<br>
+        asd<br>
+        asd<br>
+        dsa<br>
+        asd<br>
+        ads<br>
+        asd<br>
+    </div>
     
-    <script src="jurassic.js"></script>
-    <script src="nav.js"></script>
+    <footer id="footer"></footer>
+    <script src="../scripts/jurassic.js"></script>
+    <script src="../scripts/nav.js"></script>
 </body>
 </html>
