--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>Raptors</title>
 </head>
-<body>
+<body onload="startTime()">
     <main>
         <div class="raptor-info">
             <div class="info-column">
