--- a/pages/jurassic.html
+++ b/pages/jurassic.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="../styles/nav.css">
     <title>Raptors | Movies</title>
 </head>
-<body>
+<body onload="startTime()">
     <nav id="navbar"></nav>
+    
     <div>
 
         asd
@@ -33,5 +34,6 @@
     <footer id="footer"></footer>
     <script src="../scripts/jurassic.js"></script>
     <script src="../scripts/nav.js"></script>
+    <script src="../scripts/clock.js"></script>
 </body>
 </html>
