--- a/pages/timeline.html
+++ b/pages/timeline.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body onload="startTime()">
     <nav id="navbar"></nav>
 
     <main>
@@ -114,6 +114,7 @@
     <script src="../scripts/timeline.js"></script>
     <script src="../scripts/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script src="../scripts/clock.js"></script>
 
 </body>
 
