--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/nav.css">
     <title>Raptors</title>
 </head>
 <body onload="startTime()">
+    <div id="navbar"></div>
     <main>
         <div class="raptor-info">
             <div class="info-column">
@@ -31,29 +33,29 @@
               <section class="species-section" aria-labelledby="species-title">
                   <h2 id="species-title" class="species-title">Fajták</h2>
                   <div class="species-detail" tabindex="0">
-                      <h3>Velociraptor</h3>
+                      <h4>Velociraptor</h4>
                       <p>Mongólia - sivatag</p>
                       <div class="species-popup">
                           <img src="images/velociraptor.jpg" alt="Velociraptor" class="popup-image" width="600" height="400">
                       </div>
                   </div>
                   <div class="species-detail" tabindex="0">
-                      <h3>Deinonychus</h3>
+                      <h4>Deinonychus</h4>
                       <p>Észak-Amerika - erdők és sík területek</p>
                       <div class="species-popup">
                           <img src="images/Deinonychus.jpg" alt="Deinonychus" class="popup-image" width="600" height="400">
                       </div>
                   </div>
                   <div class="species-detail" tabindex="0">
-                      <h3>Utahraptor</h3>
+                      <h4>Utahraptor</h4>
                       <p>Észak-Amerika - Utah állam</p>
                       <div class="species-popup">
                           <img src="images/Utahraptor.jpg" alt="Utahraptor" class="popup-image" width="600" height="400">
                       </div>
                   </div>
                   <div class="species-detail" tabindex="0">
-                      <h3>Dromaeosaurus</h3>
-                      <p>Kanada és Észak-Amerika északi részei</p>
+                      <h4>Dromaeosaurus</h4>
+                      <p>Kanada és Észak-Amerika</p>
                       <div class="species-popup">
                           <img src="images/Dromaeosaurus.jpg" alt="Dromaeosaurus" class="popup-image" width="600" height="400">
                       </div>
@@ -63,6 +65,9 @@
         </div>
     </main>
 
+    <footer id="footer"></footer>
+
+    <script src="scripts/clock.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/nav.js"></script>
 </body>
