--- a/pages/jurassic.html
+++ b/pages/jurassic.html
@@ -11,25 +11,30 @@
 <body onload="startTime()">
     <nav id="navbar"></nav>
     
-    <div>
-
-        asd
-        <br>
-        asd<br>
-        <br>
-        asd<br>
-        asd<br>
-        asd<br>
-        dapibusdsa<br>
-        asd<br>
-        asd<br>
-        asd<br>
-        asd<br>
-        dsa<br>
-        asd<br>
-        ads<br>
-        asd<br>
-    </div>
+    <main>
+        <div class="box">
+            <div class="group">
+              <div class="rectangle">
+                <iframe width="1126" height="698" src="https://www.youtube.com/embed/DKz9zKiEtQ0" title="Jurassic World | The Story of Blue &amp; Owen" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+              <div class="overlap">
+                <img class="image" src="https://c.animaapp.com/DGE9qk97/img/image-3.jpg" />
+                <p class="text-wrapper">
+                  A gyantába zárt rovar DNS-t úgy tudták kivonni, hogy véréből kinyerik a fosszilis anyagot. Ezután a DNS-t
+                  laboratóriumi módsze-rekkel izolálták, hogy rekonstruálják a dino-szauruszok génállományát.
+                </p>
+              </div>
+              <div class="overlap-group">
+                <p class="k-k-egy-genetikailag">
+                  &#34;Kék&#34; egy genetikailag módosított Velociraptor. Különleges kapcsolatot ápol Owen Gradyval, és
+                  kiemelkedő intelligen-ciával rendelkezik. A filmek központi szerep-lője, aki az emberekkel való kapcsolata
+                  révén fontos szerepet játszik.
+                </p>
+                <img class="img" src="https://c.animaapp.com/DGE9qk97/img/image-5@2x.png" />
+              </div>
+            </div>
+          </div>
+    </main>
     
     <footer id="footer"></footer>
     <script src="../scripts/jurassic.js"></script>
