--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Raptors</title>
 </head>
 <body onload="startTime()">
-    <div id="navbar"></div>
+    <div id="in_nav"></div>
     <main>
         <div class="raptor-info">
             <div class="info-column">
@@ -69,6 +69,6 @@
 
     <script src="scripts/clock.js"></script>
     <script src="scripts/index.js"></script>
-    <script src="scripts/nav.js"></script>
+    <script src="scripts/in_nav.js"></script>
 </body>
 </html>
